finished section 6 starting project in the morning

--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -25,30 +25,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    pi = 3.1415926535897931\n",
+    "    return 4.0/3.0*pi* rad**3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "33.510321638291124"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 88
     }
    ],
    "source": [
@@ -66,27 +67,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    return num in range(low,high)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 90
     }
    ],
    "source": [
@@ -103,30 +107,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return num in range(low,high)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 92
     }
    ],
    "source": [
@@ -152,29 +156,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    upper_count = 0\n",
+    "    lower_count = 0\n",
+    "    for char in s:\n",
+    "\n",
+    "        if char.isupper() == True:\n",
+    "            upper_count += 1\n",
+    "        elif char.islower() == True:\n",
+    "            lower_count += 1\n",
+    "    return f\"The number of upper case letters is {upper_count} and the number of lower case letters is {lower_count}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'The number of upper case letters is 4 and the number of lower case letters is 33'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 94
     }
    ],
    "source": [
@@ -195,30 +208,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    return [num for num in set(lst)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 96
     }
    ],
    "source": [
@@ -238,30 +251,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    total = 1\n",
+    "    for num in numbers:\n",
+    "        total = total * num\n",
+    "        \n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-24"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 98
     }
    ],
    "source": [
@@ -280,30 +297,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    return s == s[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 100
     }
    ],
    "source": [
@@ -331,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -340,43 +357,48 @@
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    alphaset = set(alphabet)\n",
+    "    str1 = str1.replace(\" \", '')\n",
+    "    str1.lower()\n",
+    "    str1 = set(str1)\n",
+    "    return str1 == alphaset\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 108
     }
    ],
    "source": [
-    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+    "ispangram(\"Two driven jocks help fax my big quiz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'abcdefghijklmnopqrstuvwxyz'"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 103
     }
    ],
    "source": [
@@ -409,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
