--- a/03-Methods and Functions/05-Lambda-Expressions-Map-and-Filter.ipynb
+++ b/03-Methods and Functions/05-Lambda-Expressions-Map-and-Filter.ipynb
@@ -710,8 +710,7 @@
    "outputs": [],
    "source": [
     "def square(num):\n",
-    "    result = num**2\n",
-    "    return result"
+    "    return num ** 2"
    ]
   },
   {
@@ -733,6 +732,146 @@
    "source": [
     "square(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(num)>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "lambda num: num ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 4,\n",
+       " 9,\n",
+       " 16,\n",
+       " 25,\n",
+       " 36,\n",
+       " 49,\n",
+       " 64,\n",
+       " 81,\n",
+       " 100,\n",
+       " 121,\n",
+       " 144,\n",
+       " 169,\n",
+       " 196,\n",
+       " 225,\n",
+       " 256,\n",
+       " 289,\n",
+       " 324,\n",
+       " 361]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "list(map(lambda num:num**2, range(0,20)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 4,\n",
+       " 6,\n",
+       " 8,\n",
+       " 10,\n",
+       " 12,\n",
+       " 14,\n",
+       " 16,\n",
+       " 18,\n",
+       " 20,\n",
+       " 22,\n",
+       " 24,\n",
+       " 26,\n",
+       " 28,\n",
+       " 30,\n",
+       " 32,\n",
+       " 34,\n",
+       " 36,\n",
+       " 38,\n",
+       " 40,\n",
+       " 42,\n",
+       " 44,\n",
+       " 46,\n",
+       " 48]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "filtered_list = list(filter(lambda num:num %2 == 0,range(1,50)))\n",
+    "filtered_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['Jay','Whitney','Isis','Keera','Kaleb','Lincoln','William','Atlas']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Jay']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "source": [
+    "filtered_names = list(filter(lambda name: name[0]=='J',names))\n",
+    "filtered_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
