--- a/04-Milestone Project - 1/01-Milestone Project 1 - Assignment.ipynb
+++ b/04-Milestone Project - 1/01-Milestone Project 1 - Assignment.ipynb
@@ -47,6 +47,461 @@
     "\n",
     "## HAVE FUN!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<style>.foo{color:#F00;}</style><div class=\"foo\">bar</div>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "css_str = '<style>.foo{color:#F00;}</style>'\n",
+    "html_str = '<div class=\"foo\">bar</div>'\n",
+    "html = HTML(css_str + html_str)\n",
+    "display(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_choice():\n",
+    "    choice = 'WRONG'\n",
+    "    \n",
+    "    while choice.isdigit() == False:\n",
+    "        choice = input(\"Please enter a number (0-10): \")\n",
+    "\n",
+    "        if choice.isdigit() == False:\n",
+    "            print(\"Sorry that is not a digit!\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    return int(choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_choice()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acceptable_values = ['1','2','3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "result in acceptable_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def user_choice():\n",
+    "    # Variables\n",
+    "\n",
+    "    #Initial\n",
+    "    choice = 'WRONG'\n",
+    "    acceptable_range = range(0,10)\n",
+    "    within_range = False\n",
+    "\n",
+    "    # Two conditions to check\n",
+    "    # Digit or within_range ==False\n",
+    "\n",
+    "    # If either is digit or within range is false then the user will be continually prompted for input that meets the criteria set out by acceptable range and isdigit logic \n",
+    "\n",
+    "    while choice.isdigit() == False or within_range == False:\n",
+    "\n",
+    "        choice = input(\"Please enter a number (0-10): \")\n",
+    "        # digit check\n",
+    "        if choice.isdigit() == False:\n",
+    "            print(\"Sorry that is not a digit!\")\n",
+    "\n",
+    "        # Range check\n",
+    "        if choice.isdigit() == True:\n",
+    "            if int(choice) in acceptable_range:\n",
+    "                within_range = True\n",
+    "            else:\n",
+    "                print(\"You are out of acceptable range.\")\n",
+    "                within_range = False\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    return int(choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Sorry that is not a digit!\n",
+      "You are out of acceptable range.\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "user_choice()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_list = [0,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_game(game_list):\n",
+    "    print(\"Here is the current list: \")\n",
+    "    print(game_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Here is the current list: \n[0, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_game(game_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def position_choice():\n",
+    "\n",
+    "    choice = 'WRONG'\n",
+    "\n",
+    "    while choice not in ['0','1','2']:\n",
+    "        choice = input(\"Pick a position (0,1,2): \")\n",
+    "\n",
+    "        if choice not in ['0','1','2']:\n",
+    "            print(\"Sorry, invalid choice!\")\n",
+    "    return int(choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Sorry, invalid choice!\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "position_choice()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replacement_choice(game_list,position):\n",
+    "\n",
+    "    user_placement = input(\"Type a string to place at position\")\n",
+    "\n",
+    "    game_list[position] = user_placement\n",
+    "\n",
+    "    return game_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 'x', 2]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 45
+    }
+   ],
+   "source": [
+    "replacement_choice(game_list,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gameon_choice():\n",
+    "\n",
+    "    choice = 'WRONG'\n",
+    "\n",
+    "    while choice not in ['Y','N']:\n",
+    "        choice = input(\"Keep Playing? (Y or N) \")\n",
+    "\n",
+    "        if choice not in ['Y','N']:\n",
+    "            print(\"Sorry, I don't understand please enter a Y or N \")\n",
+    "\n",
+    "    if choice == 'Y':\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "source": [
+    "gameon_choice()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Here is the current list: \n",
+      "[0, 1, 2]\n",
+      "Here is the current list: \n",
+      "['X', 1, 2]\n",
+      "Sorry, I don't understand please enter a Y or N \n",
+      "Sorry, I don't understand please enter a Y or N \n"
+     ]
+    }
+   ],
+   "source": [
+    "game_on = True\n",
+    "game_list = [0,1,2]\n",
+    "\n",
+    "while game_on:\n",
+    "    display_game(game_list)\n",
+    "\n",
+    "    position = position_choice()\n",
+    "\n",
+    "    game_list = replacement_choice(game_list, position)\n",
+    "    \n",
+    "    display_game(game_list)\n",
+    "\n",
+    "    game_on = gameon_choice()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -65,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
